fixed item image shift, removed focus from stats test

--- a/src/app.css
+++ b/src/app.css
@@ -85,6 +85,10 @@ input::placeholder {
     display: none !important;
 }
 
+.visible {
+    display: block !important;
+}
+
 .dropdown {
     opacity: 0;
     visibility: hidden;
